Add dark theme for mgt-people-picker (#615)
* Dark theme for people-picker

* Fix build error

* Address pr comments

--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -8,31 +8,161 @@
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
 
+// common regardless of themes
 $avatar-margin: var(--avatar-margin, 0 4px 0 0);
 $avatar-size-s: var(--avatar-size-s, 24px);
 $avatar-size: var(--avatar-size, 48px);
 $initials-color: var(--initials-color, white);
 $initials-background-color: var(--initials-background-color, #{$ms-color-magenta});
+$placeholder: var(--placeholder-default-color, #605e5c);
 
-$input-border: var(--input-border, 2px solid #b3b0ad);
-$input-border-bottom: var(--input-border-bottom, $input-border);
-$input-border-right: var(--input-border-right, $input-border);
-$input-border-left: var(--input-border-left, $input-border);
-$input-border-top: var(--input-border-top, $input-border);
+// variables with theme colors
+$dropdown-item__background-color: (
+  dark: var(--dropdown-item-hover-background, #333d47),
+  light: var(--dropdown-item-hover-background, rgba(241, 241, 241, 0.87))
+);
 
-$input-hover-color: var(--input-hover-color, #323130);
-$input-focus-color: var(--input-focus-color, #0078d4);
-$input-background-color: var(--input-background-color, var(--people-list-background-color, white));
+$placeholder--focus: (
+  light: var(--placeholder-focus-color, #323130),
+  dark: var(--placeholder-focus-color, rgba(255, 255, 255, 0.8))
+);
 
-$selected-person-background-color: var(--selected-person-background-color, #f1f1f1);
+$dropdown__background-color: (
+  dark: var(--dropdown-background-color, #1f1f1f),
+  light: var(--dropdown-background-color, #{$white})
+);
 
-$dropdown-background-color: var(--dropdown-background-color, white);
-$dropdown-item-hover-background: var(--dropdown-item-hover-background, rgba(241, 241, 241, 0.87));
+$background-color: (
+  dark: var(--input-background-color, var(--people-list-background-color, #1f1f1f)),
+  light: var(--input-background-color, var(--people-list-background-color, #{$white}))
+);
 
-$placeholder-default-color: var(--placeholder-default-color, #605e5c);
-$placeholder-focus-color: var(--placeholder-focus-color, #323130);
-$font-color: var(--font-color, #323130);
+$border: (
+  dark: var(--input-border, 2px rgba(255, 255, 255, 0.5) solid),
+  light: var(--input-border, 2px solid #b3b0ad)
+);
 
+$border__top: (
+  dark: var(--input-border-top, 2px rgba(255, 255, 255, 0.5) solid),
+  light: var(--input-border-top, 2px solid #b3b0ad)
+);
+
+$border__right: (
+  dark: var(--input-border-right, 2px rgba(255, 255, 255, 0.5) solid),
+  light: var(--input-border-right, 2px solid #b3b0ad)
+);
+
+$border__bottom: (
+  dark: var(--input-border-bottom, 2px rgba(255, 255, 255, 0.5) solid),
+  light: var(--input-border-bottom, 2px solid #b3b0ad)
+);
+
+$border__left: (
+  dark: var(--input-border-left, 2px rgba(255, 255, 255, 0.5) solid),
+  light: var(--input-border-left, 2px solid #b3b0ad)
+);
+
+$input__border-color: (
+  light--hover: var(--input-hover-color, #323130),
+  light--focused: var(--input-focus-color, #0078d4),
+  dark--hover: var(--input-hover-color, #008394),
+  dark--focused: var(--input-focus-color, #0f78d4)
+);
+
+$color: (
+  dark: var(--font-color, #{$white}),
+  light: var(--font-color, #323130)
+);
+
+$selected-person__background-color: (
+  dark: var(--selected-person-background-color, #474747),
+  light: var(--selected-person-background-color, #f1f1f1)
+);
+
+@mixin theme__background($theme) {
+  background-color: map-get($background-color, $theme);
+}
+
+@mixin theme__border($theme) {
+  border: map-get($border, $theme);
+  border-top: map-get($border__top, $theme);
+  border-right: map-get($border__right, $theme);
+  border-bottom: map-get($border__bottom, $theme);
+  border-left: map-get($border__left, $theme);
+}
+
+@mixin theme__border--states($theme) {
+  &:hover {
+    border-color: map-get($input__border-color, $theme#{--hover});
+  }
+
+  &.focused {
+    border-color: map-get($input__border-color, $theme#{--focused});
+  }
+}
+
+@mixin theme__font-color($theme) {
+  color: map-get($color, $theme);
+}
+
+@mixin theme__selected-person($theme) {
+  background-color: map-get($selected-person__background-color, $theme);
+}
+
+@mixin theme__selected-person__overflow($theme) {
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 60%,
+    map-get($selected-person__background-color, $theme) 100%
+  );
+  background-image: -moz-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 60%,
+    map-get($selected-person__background-color, $theme) 100%
+  );
+  background-image: -o-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 60%,
+    map-get($selected-person__background-color, $theme) 100%
+  );
+  background-image: -ms-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 60%,
+    map-get($selected-person__background-color, $theme) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 60%,
+    map-get($selected-person__background-color, $theme) 100%
+  );
+}
+
+@mixin theme__flyout($theme) {
+  background-color: map-get($dropdown__background-color, $theme);
+}
+
+@mixin placeholder--focus($theme) {
+  &:focus::placeholder {
+    color: map-get($placeholder--focus, $theme);
+  }
+}
+
+@mixin theme__dropdown-item__background-color($theme) {
+  &:hover {
+    background-color: map-get($dropdown-item__background-color, $theme);
+  }
+
+  &.focused {
+    background-color: map-get($dropdown-item__background-color, $theme);
+  }
+}
+
+// Main
 :host {
   border-radius: 2px;
   font-family: var(--default-font-family, 'Segoe UI');
@@ -41,254 +171,175 @@ $font-color: var(--font-color, #323130);
   height: 100%;
   overflow: hidden;
 }
+
 :host .root,
 mgt-people-picker .root {
   display: block;
 }
 
-:host .people-picker,
-mgt-people-picker .people-picker {
-  background-color: $input-background-color;
-  padding-bottom: 6px;
-  border: $input-border;
-  border-bottom: $input-border-bottom;
-  border-left: $input-border-left;
-  border-top: $input-border-top;
-  border-right: $input-border-right;
-  &:hover {
-    border-color: $input-hover-color;
+$themes: ('light', 'dark', 'custom');
+
+@mixin theme() {
+  @each $theme in $themes {
+    :host .people-picker.theme-#{$theme},
+    mgt-people-picker .people-picker.theme-#{$theme} {
+      @include theme__background($theme);
+      @include theme__border($theme);
+      @include theme__border--states($theme);
+      padding-bottom: 6px;
+
+      .selected-list {
+        flex: 1 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        vertical-align: middle;
+        margin: 0 2px 0 0;
+        list-style-type: none;
+        padding-left: 8px;
+        font-style: normal;
+        font-weight: normal;
+        overflow: hidden;
+
+        &__person-wrapper {
+          display: flex;
+          margin: 5px 5px 0px 0;
+          align-items: center;
+          border-radius: 15px;
+          height: 24px;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          position: relative;
+          @include theme__selected-person($theme);
+
+          &__person {
+            overflow: hidden;
+            min-width: 100%;
+            --avatar-size-s: 24px;
+            margin-left: 0px;
+            --color: map-get($color, $theme);
+            @include theme__font-color($theme);
+            margin-bottom: 1px;
+            margin-right: 4px;
+          }
+
+          &__overflow {
+            margin-left: 25px;
+
+            &__gradient {
+              content: '';
+              position: absolute;
+              margin-right: 23px;
+              width: 10px;
+              height: 90%;
+              top: 0;
+              right: 0;
+              @include theme__selected-person__overflow($theme);
+            }
+
+            &__close-icon {
+              height: 100%;
+              top: 0;
+              margin-top: 4px;
+              margin-left: 10px;
+              position: absolute;
+              line-height: normal;
+              font-family: 'FabricMDL2Icons';
+              padding-right: 7px;
+              cursor: pointer;
+              right: 0;
+              @include theme__selected-person($theme);
+              @include theme__font-color($theme);
+            }
+          }
+        }
+
+        .flyout {
+          .search-box {
+            margin: 6px 2px 1px 3px;
+
+            &.search-box-start {
+              margin: 6px 0px 1px 0px;
+              line-height: normal;
+              margin-inline-start: 0px;
+              margin-inline-end: 0px;
+            }
+
+            &__input {
+              box-sizing: border-box;
+              border-width: 0;
+              border-style: none;
+              width: 100%;
+              display: flex;
+              flex: 1 0 auto;
+              font-family: var(--default-font-family, 'Segoe UI');
+              position: relative;
+              line-height: normal;
+              outline: none;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 14px;
+              line-height: 19px;
+              @include theme__background($theme);
+              @include theme__font-color($theme);
+              &::placeholder {
+                color: $placeholder;
+              }
+              @include placeholder--focus($theme);
+            }
+          }
+
+          .flyout-root {
+            padding: 0;
+            border-radius: 2px;
+            min-width: 260px;
+            overflow-y: auto;
+            text-align: left;
+            list-style-type: none;
+            @include theme__flyout($theme);
+
+            li {
+              cursor: pointer;
+            }
+
+            .people-list {
+              .list-person {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                padding: 12px;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 14px;
+                @include theme__dropdown-item__background-color($theme);
+
+                .people-person-text-area {
+                  margin-left: 13px;
+                  flex: 1 1 0;
+                  max-height: 40px;
+                  overflow: hidden;
+                  @include theme__font-color($theme);
+
+                  .people-person-text {
+                    font-size: 14px;
+                    font-weight: normal;
+                    margin: 0;
+                    padding: 0;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
-  &.focused {
-    border-color: $input-focus-color;
-  }
-}
-
-:host .flyout-root,
-mgt-people-picker .flyout-root {
-  padding: 0;
-  border-radius: 2px;
-  background-color: $dropdown-background-color;
-  min-width: 260px;
-  overflow-y: auto;
-  text-align: left;
-  list-style-type: none;
-
-  li {
-    cursor: pointer;
-  }
-}
-
-:host .people-selected-input,
-mgt-people-picker .people-selected-input {
-  box-sizing: border-box;
-  width: 100%;
-  display: flex;
-  flex: 1 0 auto;
-  font-family: var(--default-font-family, 'Segoe UI');
-  position: relative;
-  border: none;
-  line-height: normal;
-  outline: none;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 19px;
-  background-color: $input-background-color;
-  color: $font-color;
-  &::placeholder {
-    color: $placeholder-default-color;
-  }
-  &:focus::placeholder {
-    color: $placeholder-focus-color;
-  }
-}
-
-:host .people-selected-list,
-mgt-people-picker .people-selected-list {
-  flex: 1 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  vertical-align: middle;
-  margin: 0 2px 0 0;
-  list-style-type: none;
-  padding-left: 8px;
-  font-style: normal;
-  font-weight: normal;
-  overflow: hidden;
-}
-
-.overflow-offset,
-mgt-people-picker .overflow-offset {
-  margin-left: 25px;
-  .overflow-gradient {
-    content: '';
-    position: absolute;
-    margin-right: 23px;
-    width: 10px;
-    height: 90%;
-    top: 0;
-    right: 0;
-    background-image: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 60%,
-      $selected-person-background-color 100%
-    );
-    background-image: -moz-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 60%,
-      $selected-person-background-color 100%
-    );
-    background-image: -o-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 60%,
-      $selected-person-background-color 100%
-    );
-    background-image: -ms-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 60%,
-      $selected-person-background-color 100%
-    );
-    background-image: -webkit-linear-gradient(
-      left,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0) 60%,
-      $selected-person-background-color 100%
-    );
-  }
-}
-
-.CloseIcon,
-mgt-people-picker .CloseIcon {
-  height: 100%;
-  top: 0;
-  margin-top: 4px;
-  margin-left: 10px;
-  position: absolute;
-  line-height: normal;
-  font-family: 'FabricMDL2Icons';
-  padding-right: 7px;
-  cursor: pointer;
-  color: $font-color;
-  background-color: $selected-person-background-color;
-  right: 0;
-}
-
-:host .people-person,
-mgt-people-picker .people-person {
-  display: flex;
-  margin: 5px 5px 0px 0;
-  align-items: center;
-  background-color: $selected-person-background-color;
-  border-radius: 15px;
-  height: 24px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  position: relative;
-}
-
-:host .list-person,
-mgt-people-picker .list-person {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 12px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-
-  &:hover {
-    background-color: $dropdown-item-hover-background;
-  }
-}
-
-:host .list-person.focused,
-mgt-people-picker .list-person.focused {
-  background-color: $dropdown-item-hover-background;
-}
-
-:host .people-person-text,
-mgt-people-picker .people-person-text {
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-}
-
-:host .input-search,
-mgt-people-picker .input-search {
-  margin: 6px 2px 1px 3px;
-}
-:host .input-search.input-search--start,
-mgt-people-picker .input-search.input-search--start {
-  margin: 6px 0px 1px 0px;
-  line-height: normal;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
-:host .people-picker-input,
-mgt-people-picker .people-picker-input {
-  display: flex;
-  flex-wrap: wrap;
-  order: 2;
-  background-color: $input-background-color;
-  margin: $avatar-margin;
-  font-size: 14px;
-  line-height: 19px;
-  cursor: text;
-}
-
-:host .duplicate-person,
-mgt-people-picker .duplicate-person {
-  text-decoration: none;
-  border-bottom: 1px solid red;
-}
-
-:host .remove-person-button,
-mgt-people-picker .remove-person-button {
-  background: #767676;
-  transform: matrix(-0.71, -0.71, 0.71, -0.71, 0, 0);
-}
-
-:host .remove-person-button-secondary,
-mgt-people-picker .remove-person-button-secondary {
-  background: #767676;
-  transform: matrix(0.71, -0.71, 0.71, 0.71, 0, 0);
-}
-
-:host .person-display-name,
-mgt-people-picker .person-display-name {
-  max-width: 100px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-left: 8px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 19px;
-  text-align: center;
-  color: #000000;
 }
 
 mgt-person {
   --avatar-size-s: 32px;
   margin-left: 12px;
   cursor: default;
-}
-.selected-person {
-  overflow: hidden;
-  min-width: 100%;
-  --avatar-size-s: 24px;
-  margin-left: 0px;
-  --color: $font-color;
-  color: $font-color;
-  margin-bottom: 1px;
-  margin-right: 4px;
 }
 
 :host .search-error-text,
@@ -301,17 +352,9 @@ mgt-people-picker .loading-text {
   font-size: 14px;
   line-height: 19px;
   text-align: center;
-  color: $font-color;
   margin-left: 50px;
   margin-right: 50px;
   color: #0078d4;
-}
-
-:host .SearchErrorIcon,
-mgt-people-picker .SearchErrorIcon {
-  display: inline-block;
-  font-family: 'FabricMDL2Icons';
-  color: #cf0000;
 }
 
 :host .message-parent,
@@ -340,15 +383,9 @@ mgt-people-picker .people-person-job-title {
     text-transform: uppercase;
   }
 }
-:host .people-person-text-area,
-mgt-people-picker .people-person-text-area {
-  margin-left: 13px;
-  flex: 1 1 0;
-  max-height: 40px;
-  overflow: hidden;
-  color: $font-color;
-}
 
 mgt-flyout {
   flex: 1 0 auto;
 }
+
+@include theme();
