--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
@@ -144,7 +144,7 @@
 
     .date-range {
       display: flex;
-      align-items: flex-end;
+      align-items: flex-start;
     }
 
     .date-range__circle {
