--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -50,8 +50,8 @@
     }
 
     .divider {
+      display: flex;
       background: #e8e8e8;
-      width: 100%;
       height: 1px;
       margin-top: 26px;
       margin-bottom: 18px;
