--- a/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -460,3 +460,76 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
     }
   }
 }
+
+:host,
+mgt-people-picker.rtl {
+  .input-wrapper::after {
+    content: '';
+    position: absolute;
+    width: 99%;
+    height: 90%;
+    top: 2px;
+    left: 0px;
+    background-image: linear-gradient(
+      to left,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 80%,
+      $input-background-color 100%
+    );
+    background-image: -moz-linear-gradient(
+      right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 80%,
+      $input-background-color 100%
+    );
+    background-image: -o-linear-gradient(
+      right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 80%,
+      $input-background-color 100%
+    );
+    background-image: -ms-linear-gradient(
+      right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 80%,
+      $input-background-color 100%
+    );
+    background-image: -webkit-linear-gradient(
+      right,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 80%,
+      $input-background-color 100%
+    );
+  }
+  .search-wrapper {
+    margin-right: 0px !important;
+  }
+  .search-icon {
+    margin-left: 8px;
+  }
+  .channel-display {
+    padding-right: 34px !important;
+    padding-left: 10px !important;
+  }
+  .close-icon {
+    position: absolute;
+    right: auto;
+    left: 10px;
+  }
+  .dropdown {
+    text-align: right;
+  }
+  .arrow {
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: 'FlipH';
+    margin-right: 0px;
+    margin-left: 5px;
+  }
+  .selected-team {
+    padding-left: 10px;
+  }
+}
