updating .rtl selector

--- a/packages/mgt/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt/src/components/mgt-login/mgt-login.scss
@@ -118,15 +118,6 @@ mgt-login .popup-command {
   }
 }
 
-:host .login-button,
-mgt-login.rtl {
-  mgt-person {
-    --details-spacing: 0px 6px 0px 0px;
-  }
-}
-:host .popup-content,
-mgt-login.rtl {
-  mgt-person {
-    --details-spacing: 0px 12px 0px 0px;
-  }
+:host(.rtl) .login-button {
+  --details-spacing: 0px 6px 0px 0px;
 }
