--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -390,8 +390,7 @@ mgt-flyout {
 
 @include theme();
 
-:host,
-mgt-people-picker.rtl {
+:host(.rtl) {
   .selected-list {
     list-style-type: none;
     &__person-wrapper {
