--- a/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
+++ b/packages/mgt/src/components/sub-components/mgt-dot-options/mgt-dot-options.scss
@@ -8,6 +8,8 @@
 @import '../../../styles/shared-styles.scss';
 @import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
+$dot-options-translateX: var(--dot-options-translateX, translateX(-50px));
+
 :host,
 mgt-dot-options {
   font-family: 'Segoe UI';
@@ -32,7 +34,7 @@ mgt-dot-options .Menu {
   display: none;
   color: black;
   white-space: nowrap;
-  transform: translateX(-50px);
+  transform: var(--dot-options-translateX, translateX(-50px));
 }
 
 :host .DotMenu.Open .Menu,
