--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -43,7 +43,9 @@
         min-width: 28px;
         height: 28px;
         margin-right: 12px;
-        background-color: #797775;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .file__details {
