[PersonCard] Added Files section and updated Profile section (#669)
* Fixed file icons and updated profile section

* Improved missing data states in profile

* Updated missing ddata state for profile languages

* Removed commented code

--- a/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
+++ b/packages/mgt/src/components/mgt-person-card/sections/mgt-person-card-files/mgt-person-card-files.scss
@@ -9,6 +9,7 @@
 
 :host {
   position: relative;
+  user-select: none;
 
   .root {
     padding: 20px 0;
@@ -43,7 +44,9 @@
         min-width: 28px;
         height: 28px;
         margin-right: 12px;
-        background-color: #797775;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .file__details {
