--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -7,160 +7,15 @@
 
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
+@import './mgt-people-picker.theme.scss';
 
-// common regardless of themes
+// common vars regardless of themes
 $avatar-margin: var(--avatar-margin, 0 4px 0 0);
 $avatar-size-s: var(--avatar-size-s, 24px);
 $avatar-size: var(--avatar-size, 48px);
-$initials-color: var(--initials-color, white);
+$initials-color: var(--initials-color, #{$white});
 $initials-background-color: var(--initials-background-color, #{$ms-color-magenta});
-$placeholder: var(--placeholder-default-color, #605e5c);
-
-// variables with theme colors
-$dropdown-item__background-color: (
-  dark: var(--dropdown-item-hover-background, #333d47),
-  light: var(--dropdown-item-hover-background, rgba(241, 241, 241, 0.87))
-);
-
-$placeholder--focus: (
-  light: var(--placeholder-focus-color, #323130),
-  dark: var(--placeholder-focus-color, rgba(255, 255, 255, 0.8))
-);
-
-$dropdown__background-color: (
-  dark: var(--dropdown-background-color, #1f1f1f),
-  light: var(--dropdown-background-color, #{$white})
-);
-
-$background-color: (
-  dark: var(--input-background-color, var(--people-list-background-color, #1f1f1f)),
-  light: var(--input-background-color, var(--people-list-background-color, #{$white}))
-);
-
-$border: (
-  dark: var(--input-border, 2px rgba(255, 255, 255, 0.5) solid),
-  light: var(--input-border, 2px solid #b3b0ad)
-);
-
-$border__top: (
-  dark: var(--input-border-top, 2px rgba(255, 255, 255, 0.5) solid),
-  light: var(--input-border-top, 2px solid #b3b0ad)
-);
-
-$border__right: (
-  dark: var(--input-border-right, 2px rgba(255, 255, 255, 0.5) solid),
-  light: var(--input-border-right, 2px solid #b3b0ad)
-);
-
-$border__bottom: (
-  dark: var(--input-border-bottom, 2px rgba(255, 255, 255, 0.5) solid),
-  light: var(--input-border-bottom, 2px solid #b3b0ad)
-);
-
-$border__left: (
-  dark: var(--input-border-left, 2px rgba(255, 255, 255, 0.5) solid),
-  light: var(--input-border-left, 2px solid #b3b0ad)
-);
-
-$input__border-color: (
-  light--hover: var(--input-hover-color, #323130),
-  light--focused: var(--input-focus-color, #0078d4),
-  dark--hover: var(--input-hover-color, #008394),
-  dark--focused: var(--input-focus-color, #0f78d4)
-);
-
-$color: (
-  dark: var(--font-color, #{$white}),
-  light: var(--font-color, #323130)
-);
-
-$selected-person__background-color: (
-  dark: var(--selected-person-background-color, #474747),
-  light: var(--selected-person-background-color, #f1f1f1)
-);
-
-@mixin theme__background($theme) {
-  background-color: map-get($background-color, $theme);
-}
-
-@mixin theme__border($theme) {
-  border: map-get($border, $theme);
-  border-top: map-get($border__top, $theme);
-  border-right: map-get($border__right, $theme);
-  border-bottom: map-get($border__bottom, $theme);
-  border-left: map-get($border__left, $theme);
-}
-
-@mixin theme__border--states($theme) {
-  &:hover {
-    border-color: map-get($input__border-color, $theme#{--hover});
-  }
-
-  &.focused {
-    border-color: map-get($input__border-color, $theme#{--focused});
-  }
-}
-
-@mixin theme__font-color($theme) {
-  color: map-get($color, $theme);
-}
-
-@mixin theme__selected-person($theme) {
-  background-color: map-get($selected-person__background-color, $theme);
-}
-
-@mixin theme__selected-person__overflow($theme) {
-  background-image: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    map-get($selected-person__background-color, $theme) 100%
-  );
-  background-image: -moz-linear-gradient(
-    left,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    map-get($selected-person__background-color, $theme) 100%
-  );
-  background-image: -o-linear-gradient(
-    left,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    map-get($selected-person__background-color, $theme) 100%
-  );
-  background-image: -ms-linear-gradient(
-    left,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    map-get($selected-person__background-color, $theme) 100%
-  );
-  background-image: -webkit-linear-gradient(
-    left,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 60%,
-    map-get($selected-person__background-color, $theme) 100%
-  );
-}
-
-@mixin theme__flyout($theme) {
-  background-color: map-get($dropdown__background-color, $theme);
-}
-
-@mixin placeholder--focus($theme) {
-  &:focus::placeholder {
-    color: map-get($placeholder--focus, $theme);
-  }
-}
-
-@mixin theme__dropdown-item__background-color($theme) {
-  &:hover {
-    background-color: map-get($dropdown-item__background-color, $theme);
-  }
-
-  &.focused {
-    background-color: map-get($dropdown-item__background-color, $theme);
-  }
-}
+$placeholder: var(--placeholder-default-color, $input-outlined__placeholder__color--light);
 
 // Main
 :host {
@@ -177,15 +32,18 @@ mgt-people-picker .root {
   display: block;
 }
 
-$themes: ('light', 'dark', 'custom');
-
 @mixin theme() {
   @each $theme in $themes {
-    :host .people-picker.theme-#{$theme},
-    mgt-people-picker .people-picker.theme-#{$theme} {
-      @include theme__background($theme);
-      @include theme__border($theme);
-      @include theme__border--states($theme);
+    :host .people-picker.mgt-#{$theme},
+    mgt-people-picker .people-picker.mgt-#{$theme} {
+      background-color: map-get($background-color, $theme);
+      @include input__border($theme);
+      &:hover {
+        border-color: map-get($input__border-color--hover, $theme);
+      }
+      &.focused {
+        border-color: map-get($input__border-color--focused, $theme);
+      }
       padding-bottom: 6px;
 
       .selected-list {
@@ -210,7 +68,7 @@ $themes: ('light', 'dark', 'custom');
           text-overflow: ellipsis;
           overflow: hidden;
           position: relative;
-          @include theme__selected-person($theme);
+          background-color: map-get($selected-person__background-color, $theme);
 
           &__person {
             overflow: hidden;
@@ -218,7 +76,7 @@ $themes: ('light', 'dark', 'custom');
             --avatar-size-s: 24px;
             margin-left: 0px;
             --color: map-get($color, $theme);
-            @include theme__font-color($theme);
+            color: map-get($color, $theme);
             margin-bottom: 1px;
             margin-right: 4px;
           }
@@ -234,7 +92,7 @@ $themes: ('light', 'dark', 'custom');
               height: 90%;
               top: 0;
               right: 0;
-              @include theme__selected-person__overflow($theme);
+              @include selected-person__overflow($theme);
             }
 
             &__close-icon {
@@ -248,8 +106,8 @@ $themes: ('light', 'dark', 'custom');
               padding-right: 7px;
               cursor: pointer;
               right: 0;
-              @include theme__selected-person($theme);
-              @include theme__font-color($theme);
+              background-color: map-get($selected-person__background-color, $theme);
+              color: map-get($color, $theme);
             }
           }
         }
@@ -280,12 +138,14 @@ $themes: ('light', 'dark', 'custom');
               font-weight: normal;
               font-size: 14px;
               line-height: 19px;
-              @include theme__background($theme);
-              @include theme__font-color($theme);
+              background-color: map-get($background-color, $theme);
+              color: map-get($color, $theme);
               &::placeholder {
                 color: $placeholder;
               }
-              @include placeholder--focus($theme);
+              &:focus::placeholder {
+                color: map-get($placeholder--focus, $theme);
+              }
             }
           }
 
@@ -296,7 +156,7 @@ $themes: ('light', 'dark', 'custom');
             overflow-y: auto;
             text-align: left;
             list-style-type: none;
-            @include theme__flyout($theme);
+            background-color: map-get($dropdown__background-color, $theme);
 
             li {
               cursor: pointer;
@@ -311,14 +171,16 @@ $themes: ('light', 'dark', 'custom');
                 font-style: normal;
                 font-weight: 600;
                 font-size: 14px;
-                @include theme__dropdown-item__background-color($theme);
-
+                &:hover,
+                &.focused {
+                  background-color: map-get($dropdown-item__background-color, $theme);
+                }
                 .people-person-text-area {
                   margin-left: 13px;
                   flex: 1 1 0;
                   max-height: 40px;
                   overflow: hidden;
-                  @include theme__font-color($theme);
+                  color: map-get($color, $theme);
 
                   .people-person-text {
                     font-size: 14px;
