--- a/packages/mgt/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt/src/components/mgt-login/mgt-login.scss
@@ -118,8 +118,8 @@ mgt-login .popup-command {
   }
 }
 
-:host(.rtl) .login-button {
-  --details-spacing: 0px 6px 0px 0px !important;
+.login-button[dir='rtl'] {
+  --details-spacing: 0px 6px 0px 0px;
 }
 .login-icon {
   & + span {
