--- a/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -661,7 +661,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
   }
 }
 
-:host(.rtl) {
+[dir='rtl'] {
   mgt-arrow-options {
     --arrow-options-left: auto;
   }
