--- a/packages/mgt/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt/src/components/mgt-agenda/mgt-agenda.scss
@@ -156,16 +156,16 @@ mgt-agenda .event-attendee-loading {
 
 [dir='rtl'] {
   .event-location {
-    margin: 0px 4px 0px 0px !important;
+    margin: 0px 4px 0px 0px;
   }
   .event-time-container {
     direction: ltr;
     margin: 18px 18px 18px 38px;
   }
   .event-details-container {
-    margin: 14px 0px 14px 18px !important;
+    margin: 14px 0px 14px 18px;
     .event-subject {
-      margin: 0px 0px 0px 18px !important;
+      margin: 0px 0px 0px 18px;
     }
     .event-location-container {
       margin: 8px 0px 0px 18px;
