--- a/packages/mgt/src/components/mgt-tasks/mgt-tasks.scss
+++ b/packages/mgt/src/components/mgt-tasks/mgt-tasks.scss
@@ -700,9 +700,9 @@ mgt-tasks,
   }
 
   .TaskDetails {
-    margin-right: 14px !important;
+    margin-right: 14px;
   }
   .TaskIcon {
-    margin-left: 8px !important;
+    margin-left: 8px;
   }
 }
