--- a/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -670,14 +670,14 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
   }
 
   .TaskDetails {
-    margin-right: 14px !important;
+    margin-right: 14px;
   }
   .TaskIcon {
-    margin-left: 8px !important;
+    margin-left: 8px;
   }
   .TaskDetail {
     svg {
-      margin-left: 4px !important;
+      margin-left: 4px;
     }
   }
 }
