--- a/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -501,14 +501,14 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
     );
   }
   .search-wrapper {
-    margin-right: 0px !important;
+    margin-right: 0px;
   }
   .search-icon {
     margin-left: 8px;
   }
   .channel-display {
-    padding-right: 34px !important;
-    padding-left: 10px !important;
+    padding-right: 34px;
+    padding-left: 10px;
   }
   .close-icon {
     position: absolute;
